--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/whyt-byte/Blue-Topaz_Obsidian-css/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://zhob.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
@@ -12,7 +13,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=true
